--- a/multi.tex
+++ b/multi.tex
@@ -49,7 +49,7 @@
 \newcommand{\fr}[1]{\iffr#1\fi}
 \newcommand{\lat}[1]{\iflat#1\fi}
 
-\frtrue
+\zhtrue
 \en{\lattrue}
 \fr{\lattrue}
 
@@ -259,8 +259,9 @@ Z. Lin, \textbf{H. Qin} and S. C. Chan, ``A New Probabilistic Representation of 
 \begin{tabular}{ @{} >{\bfseries}l @{\hspace{2ex}}l }
 \zh{人类语言}\en{Natural Languages}\fr{Langues naturelles} & 
 \zh{普通话（母语），粤语（母语），英语（熟练流利），法语（爱好，会一点）}
-\en{Mandarin (native), Cantonese (native), \\ &English (fluent), French (elementary)}
-\fr{Mandarin (maternelle), Cantonais (maternelle), Anglais (courant), Français (élémentaire)}\\
+\en{Mandarin (native), Cantonese (native), English (fluent), French (elementary)}
+\fr{Mandarin (maternelle), Cantonais (maternelle), }\\
+\fr{&Anglais (courant), Français (élémentaire)\\}
 \zh{计算机语言}\en{Computer Languages}\fr{Langages informatiques} & C/C++, Python, MatLab \\
 \zh{工具}\en{Tools}\fr{Outils} & Visual Studio, VSCode, Eclipse, Anaconda platform
 \end{tabular}
