--- a/content.tex
+++ b/content.tex
@@ -1,63 +1,3 @@
-% !TEX program = xelatex
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Medium Length Professional CV
-% LaTeX Template
-% Version 2.0 (8/5/13)
-%
-% This template has been downloaded from:
-% http://www.LaTeXTemplates.com
-%
-% Original author:
-% Trey Hunner (http://www.treyhunner.com/)
-%
-% Important note:
-% This template requires the resume.cls file to be in the same directory as the
-% .tex file. The resume.cls file provides the resume style used for structuring the
-% document.
-%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-%----------------------------------------------------------------------------------------
-%	PACKAGES AND OTHER DOCUMENT CONFIGURATIONS
-%----------------------------------------------------------------------------------------
-
-\documentclass{resume} % Use the custom resume.cls style
-
-\usepackage[left=0.75in,top=0.6in,right=0.75in,bottom=0.6in]{geometry} % Document margins
-
-\usepackage{fontspec, xunicode, xltxtra}
-\usepackage{xeCJK}
-
-\setmainfont{Segoe UI}
-\setCJKmainfont{HarmonyOS Sans SC}
-
-\usepackage[ocgcolorlinks]{hyperref}
-\hypersetup{
-	colorlinks   = true, %Colours links instead of ugly boxes
-	urlcolor     = blue, %Colour for external hyperlinks
-	linkcolor    = blue, %Colour of internal links
-	citecolor   = red %Colour of citations
-}
-
-\newif\ifzh
-\newif\ifen
-\newif\iffr
-\newif\iflat
-
-\newcommand{\zh}[1]{\ifzh#1\fi}
-\newcommand{\en}[1]{\ifen#1\fi}
-\newcommand{\fr}[1]{\iffr#1\fi}
-\newcommand{\lat}[1]{\iflat#1\fi}
-
-\zhtrue
-\en{\lattrue}
-\fr{\lattrue}
-
-\name{\zh{覃泓胨}\lat{QIN Hongdong}} % Your name
-\address{(+86)13603087140 \\ hongdongdonald@gmail.com} % Your phone number and email
-
-\begin{document}
-
 %----------------------------------------------------------------------------------------
 %	PROFILE SECTION
 %----------------------------------------------------------------------------------------
@@ -178,7 +118,7 @@
 
 \begin{rSection}{\zh{参与项目}\en{Projects}\fr{Projets}}
     \begin{rSubsection}{\zh{音视频编解码技术研究}\en{Audio and video coding research}\fr{Recherche sur le codage audio et video}}
-		{2023年01月 -- \zh{现在}\en{Now}\fr{Aujourd'hui}}{}{}
+		{2023-01 -- \zh{现在}\en{Now}\fr{Aujourd'hui}}{}{}
         \zh{\item 基于VVC的技术改进}
         \en{\item Technical development based on VVC standard}
         \fr{\item Développement technique basé sur le standard VVC}
@@ -269,5 +209,3 @@ Z. Lin, \textbf{H. Qin} and S. C. Chan, ``A New Probabilistic Representation of 
 \end{rSection}
 
 %----------------------------------------------------------------------------------------
-
-\end{document}
