--- a/content.tex
+++ b/content.tex
@@ -15,18 +15,18 @@
 \begin{rSection}{\zh{教育背景}\en{Education}\fr{Formation}}
 	{\bf\zh{香港大学}\en{The University of Hong Kong}\fr{Université de Hong Kong}} \hfill 
 	{2013-09 -- 2020-06}\\
-	{\zh{哲学博士}\en{Doctor of Philosophy}\fr{Doctorat}} \hfill 
-	{\zh{香港}\lat{Hong Kong}}\\
+	{\em \zh{哲学博士}\en{Doctor of Philosophy}\fr{Doctorat}} \hfill 
+	{\em \zh{香港}\lat{Hong Kong}}\\
 	\zh{毕业论文：}\en{Thesis: }\fr{Titre de la thèse : }\href{http://hdl.handle.net/10722/318421}{\textit{Novel Techniques for Depth Map Compression}}
 
 	{\bf\zh{新加坡国立大学}\en{National University of Singapore}\fr{Université nationale de Singapour}} \hfill {2008-08 -- 2008-12}\\
-	{\zh{电机与电脑工程系交换生}\en{Exchange Programme, Electrical and Computer Engineering}\fr{Programme d'échanges, ingénierie électrique et informatique}} \hfill 
-	{\zh{新加坡}\en{Singapore}\fr{Singapour}}
+	{\em \zh{电机与电脑工程系交换生}\en{Exchange Programme, Electrical and Computer Engineering}\fr{Programme d'échanges, ingénierie électrique et informatique}} \hfill 
+	{\em \zh{新加坡}\en{Singapore}\fr{Singapour}}
 
 	{\bf\zh{香港理工大学}\en{The Hong Kong Polytechnic University}\fr{Université polytechnique de Hong Kong}} \hfill 
 	{2006-09 -- 2011-08}\\
-	{\zh{工学学士，电子及资讯工程学}\en{Bachelor of Engineering in Electronic and Information Engineering}\fr{Baccalauréat en ingénierie, ingénierie électronique et informatique}} \hfill
-	{\zh{香港}\lat{Hong Kong}}\\
+	{\em \zh{工学学士，电子及资讯工程学}\en{Bachelor of Engineering in Electronic and Information Engineering}\fr{Baccalauréat en ingénierie, ingénierie électronique et informatique}} \hfill
+	{\em \zh{香港}\lat{Hong Kong}}\\
 	\zh{甲等荣誉}\en{Graduated with 1st Class Honours}\fr{Avec l'honneur de la 1ère  classe}\\
 	\zh{包含12个月实习训练}\en{Included 12-month industrial training}\fr{Avec le stage industriel de 12 mois}
 \end{rSection}
